<resources>
    <string name="app_name">Tour Note</string>
    <!--    Common Action-->
    <string name="common_action_close">Close</string>
    <string name="common_action_save">Save</string>
    <!--    Main Screen-->
    <string name="empty_note">Your <i>note list</i> is <b>empty</b>, let start to create your note <b><u>now</u></b></string>
    <string name="author">Giang Hoang</string>
    <string name="email">HVGiang86@gmail.com</string>
    <!--        Main Screen Menu-->
    <string name="main_menu_search">Search</string>
    <string name="main_menu_about_app">About App</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_version">Version</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    
    <string name="main_menu_second_activity">Second Activity</string>
    <string name="main_menu_practice_activity">Practice Activity</string>
    
    <!--        Main Screen Dynamic Menu-->
    <string name="dynamic_menu_add_category">Add Category</string>
    <string name="dynamic_menu_add_note">Add Note</string>
    <string name="dynamic_menu_edit_note">Edit Note</string>
    <string name="dynamic_menu_close">Close</string>
    <!--    Note Detail Screen-->
    <!--        Note Detail Menu-->
    <string name="note_detail_menu_edit_note">Edit Note</string>
    <string name="note_detail_menu_share">Share</string>
    <string name="note_detail_menu_delete">Delete</string>
    <!--    Edit Note Screen-->
    <string name="edit_note_category">Category</string>
    <string name="edit_note_detail">Detail</string>
    <string name="edit_note_other_information">Other Information</string>
    <string name="edit_note_map_location">Map Location</string>
    <string name="edit_note_note_name_hint">Name</string>
    <string name="edit_note_description">Description</string>
    <string name="edit_note_note_hint">Note - You can add later</string>
    <string name="edit_note_address_hint">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_content">About my app here</string>
    <string name="help_content">Help you here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>