<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/main_menu_search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_action_about_app"
        android:title="@string/main_menu_about_app"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/main_menu_help"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/second_activity"
        android:title="@string/main_menu_second_activity"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/practice_activity"
        android:title="@string/main_menu_practice_activity"
        app:showAsAction="never"
        />
</menu>